# basic_shopify_api

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
basic_shopify_api/: __init__.py  __version__.py  client.py  clients.py  constants.py  deferrer.py  models.py  options.py  session.py  store.py  types.py  utils.py
basic_shopify_api/clients/: __init__.py  async_client.py  client.py  common.py
docs/: __version__.html  basic_shopify_api.html  clients.html  constants.html  deferrer.html  index.html  models.html  options.html  store.html  types.html  utils.html
docs/basic_shopify_api/: constants.html  store.html
docs/basic_shopify_api/clients/: index.html
docs/clients/: async_client.html  client.html  common.html
fastshopifyapi/: __version__.py  constants.py  deferrer.py
fastshopifyapi/clients/: client.py  common.py
tests/: conftest.py  test_client_common.py  test_client_graphql.py  test_client_limits.py  test_client_rest.py  test_options.py  test_utils.py  utils.py
tests/fixtures/: get_decode_error.json  get_errors.json  get_shop.json  post_graphql.json  post_graphql_expensive.json
